fixed bug with mobile menu z-index being less than dashboard z-index. fixed the weather to proxy instead of absolute localhost.

--- a/src/SCSS/Dashboard.scss
+++ b/src/SCSS/Dashboard.scss
@@ -72,7 +72,7 @@
         // border-radius: 50%;
         background: #F5F5F5;
         position: relative;
-        z-index: 2;
+        // z-index: 2;
         .forecast-top {
             height: 50%;
             // border: 1px solid blue;
